manifests/team-vault-gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-vault
  labels:
    team-vault/service: team-vault
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
